--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["atomic", "Arc"]
 categories = ["data-structures", "memory-management"]
 license = "MIT OR Apache-2.0"
-edition = "2018"
+edition = "2021"
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -26,16 +26,16 @@ experimental-strategies = []
 serde = { version = "1", features = ["rc"], optional = true }
 
 [dev-dependencies]
-adaptive-barrier = "~1"
-criterion = "~0.4"
-crossbeam-utils = "~0.8"
+adaptive-barrier = "1"
+criterion = "0.4"
+crossbeam-utils = "0.8"
 itertools = "0.10"
-num_cpus = "~1"
-once_cell = "~1"
-parking_lot = "~0.12"
+num_cpus = "1"
+once_cell = "1"
 proptest = "1"
-serde_derive = "1.0.130"
-serde_test = "1.0.130"
+serde_derive = "1"
+serde_test = "1"
+parking_lot = { path="../parking_lot" }
 
 [profile.bench]
 debug = true
